tests/ui/types.stderr
error[E0308]: mismatched types
  --> tests/ui/types.rs:20:9
   |
20 |     X = u8::MAX,
   |         ^^^^^^^ expected `isize`, found `u8`
